[gd_scene load_steps=18 format=3 uid="uid://bhssg8crf4j4x"]

[ext_resource type="Script" uid="uid://cxky3gdrakv8w" path="res://Scenes/Enemy/enemy.gd" id="1_mw074"]
[ext_resource type="Resource" uid="uid://c6omelndw1qw2" path="res://Resources/EnemyStats.tres" id="2_nvvbs"]
[ext_resource type="Texture2D" uid="uid://nqeayy85ng25" path="res://Assets/Characters/Slime1.png" id="3_kiqm3"]
[ext_resource type="Texture2D" uid="uid://df2d2gb4lfru3" path="res://Assets/VFX/slash.png" id="4_6j3ko"]
[ext_resource type="Script" uid="uid://btnm3yr0h83c8" path="res://Scenes/Enemy/EnemyAttack.gd" id="4_dmwl5"]
[ext_resource type="Script" uid="uid://b3nnfs31076mw" path="res://Scripts/behavior.gd" id="4_pqgp3"]
[ext_resource type="Script" uid="uid://cytihr5nd5wq5" path="res://Scenes/Enemy/EnemyIdle.gd" id="5_4ad2a"]
[ext_resource type="Texture2D" uid="uid://ddcj103clnjb2" path="res://Assets/Temp/muzzle_flash.png" id="5_d40jh"]
[ext_resource type="Script" uid="uid://cm2hclm0qfc6y" path="res://Scenes/Enemy/EnemyMovement.gd" id="5_pqgp3"]
[ext_resource type="Script" uid="uid://dlyifutkganda" path="res://Scripts/death.gd" id="8_kiqm3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dmwl5"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2t2r4"]
radius = 250.0

[sub_resource type="Animation" id="Animation_2chwy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6j3ko"]
resource_name = "idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_beese"]
resource_name = "melee"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slash:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Slash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.7),
"transitions": PackedFloat32Array(1, -10),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_kiqm3"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00715625, 0.107156, 0.207156, 0.307156, 0.407156, 0.507156, 0.603578, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_beese"]
_data = {
&"RESET": SubResource("Animation_2chwy"),
&"idle": SubResource("Animation_6j3ko"),
&"melee": SubResource("Animation_beese"),
&"walk": SubResource("Animation_kiqm3")
}

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 15
motion_mode = 1
script = ExtResource("1_mw074")
stats = ExtResource("2_nvvbs")

[node name="EnemySprite" type="Sprite2D" parent="."]
position = Vector2(0, -19)
texture = ExtResource("3_kiqm3")
hframes = 5
vframes = 4

[node name="Slash" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_6j3ko")
hframes = 3
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_dmwl5")

[node name="DetectionRange" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="Radius" type="CollisionShape2D" parent="DetectionRange"]
unique_name_in_owner = true
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_2t2r4")

[node name="Behavior" type="Node2D" parent="." node_paths=PackedStringArray("init_state", "animator", "sprite", "body")]
unique_name_in_owner = true
script = ExtResource("4_pqgp3")
init_state = NodePath("Idle")
animator = NodePath("../AnimationPlayer")
sprite = NodePath("../EnemySprite")
body = NodePath("..")

[node name="Idle" type="Node2D" parent="Behavior" node_paths=PackedStringArray("enemy", "animator")]
unique_name_in_owner = true
script = ExtResource("5_4ad2a")
enemy = NodePath("../..")
animator = NodePath("../../AnimationPlayer")

[node name="Movement" type="Node2D" parent="Behavior" node_paths=PackedStringArray("enemy", "animator")]
unique_name_in_owner = true
script = ExtResource("5_pqgp3")
enemy = NodePath("../..")
animator = NodePath("../../AnimationPlayer")

[node name="Attack" type="Node2D" parent="Behavior" node_paths=PackedStringArray("enemy", "animator")]
unique_name_in_owner = true
script = ExtResource("4_dmwl5")
enemy = NodePath("../..")
animator = NodePath("../../AnimationPlayer")

[node name="Death" type="Node2D" parent="Behavior" node_paths=PackedStringArray("enemy", "animator")]
unique_name_in_owner = true
script = ExtResource("8_kiqm3")
enemy = NodePath("../..")
animator = NodePath("../../AnimationPlayer")

[node name="CrosshairMark" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -19)

[node name="Crosshair" type="Sprite2D" parent="CrosshairMark"]
unique_name_in_owner = true
position = Vector2(40, 0)
scale = Vector2(0.3125, 0.3125)
texture = ExtResource("5_d40jh")

[node name="ShootingCD" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_beese")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "1"

[node name="Button2" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "2"

[node name="Button3" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "3"

[node name="Button4" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "4"

[node name="Button5" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "MORE"

[connection signal="body_entered" from="DetectionRange" to="Behavior" method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="Behavior" method="_on_detection_range_body_exited"]
[connection signal="timeout" from="ShootingCD" to="Behavior/Attack" method="_on_shooting_cd_timeout"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button5" to="." method="_on_button_5_pressed"]
